--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-   "name": "@toba/svg-trasformer",
+   "name": "@toba/svg-transformer",
    "version": "1.0.0",
-   "description": "Toba svg-transformer module",
+   "description": "Toba SVG transformer module",
    "private": false,
    "author": {
       "name": "Jason Abbott",
@@ -16,17 +16,6 @@
    "files": [
       "cjs/**/*"
    ],
-   "workspaces": {
-      "examples": [
-         "examples/*"
-      ],
-      "nohoist": [
-         "**/react-native",
-         "**/react-native/**",
-         "**/*mobile/**/react",
-         "**/*mobile/**/react/**"
-      ]
-   },
    "scripts": {
       "prepublishOnly": "./node_modules/.bin/tsc --project tsconfig.build.json",
       "link": "ln -s ~/dev/src/toba/svg-loader/node_modules/react-native/ ~/dev/src/toba/svg-loader/node_modules/@toba/example/node_modules/",
@@ -34,18 +23,12 @@
    },
    "devDependencies": {
       "@toba/develop": "^6.0.0",
-      "@toba/example": "^3.0.0",
       "@toba/test": "^3.0.0",
       "@types/babel__core": "^7.0.5",
       "@types/babel__template": "^7.0.2",
-      "@types/html-minifier": "^3.5.3",
-      "@types/memory-fs": "^0.3.2",
       "@types/react-native": "^0.57.38",
-      "@types/webpack": "^4.4.24",
       "babel-loader": "^8.0.5",
-      "react-native": "^0.58.5",
-      "webpack": "^4.29.0",
-      "webpack-cli": "^3.2.3"
+      "react-native": "^0.58.5"
    },
    "repository": {
       "type": "git",
@@ -55,8 +38,6 @@
       "@svgr/core": "^4.1.0",
       "@svgr/plugin-jsx": "^4.1.0",
       "@svgr/plugin-svgo": "^4.0.3",
-      "@toba/node-tools": "^1.1.0",
-      "html-webpack-plugin": "^4.0.0-beta",
       "svgo": "^1.1.1"
    }
 }
