--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@toba/svg-transformer",
-   "version": "1.2.0",
+   "version": "1.3.0",
    "description": "Toba SVG transformer module",
    "private": false,
    "author": {
@@ -37,6 +37,7 @@
    "dependencies": {
       "@svgr/core": "^4.1.0",
       "@svgr/plugin-jsx": "^4.1.0",
+      "@svgr/plugin-prettier": "^4.0.3",
       "svgo": "^1.1.1"
    }
 }
