begin style plugin

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
          "label": "Test",
          "command": "./node_modules/.bin/jest",
          "presentation": {
+            "echo": false,
             "showReuseMessage": false,
             "clear": true
          },
