--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "@svgr/core": "^4.1.0",
       "@svgr/plugin-jsx": "^4.1.0",
       "@svgr/plugin-prettier": "^4.0.3",
+      "@toba/node-tools": "^1.2.0",
       "svgo": "^1.1.1"
    }
 }
