--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@toba/svg-transformer",
-   "version": "1.5.3",
+   "version": "1.5.4",
    "description": "Toba SVG transformer module",
    "private": false,
    "author": {
@@ -28,7 +28,7 @@
       "@types/babel__template": "^7.0.2",
       "@types/react-native": "^0.57.38",
       "babel-loader": "^8.0.5",
-      "react-native": "^0.58.5"
+      "react-native": "^0.59.0"
    },
    "repository": {
       "type": "git",
@@ -39,6 +39,7 @@
       "@svgr/plugin-jsx": "^4.1.0",
       "@svgr/plugin-prettier": "^4.0.3",
       "@toba/node-tools": "^1.2.0",
+      "metro-react-native-babel-transformer": "^0.53.1",
       "svgo": "^1.1.1"
    }
 }
